css/towtext.scss
@import 'normalize';
@import 'foundation';

$medium_blue:		#00A3D9;
$bright_blue:		#26C9FF;
$charcoal:			#666666;
$lightgrey:         #888888;
$white:				#FFFFFF;
$slate:				#E5E5E5;

body {
    background: $slate url(../img/bg-chicago.jpg) top center no-repeat;
}

header {
    //background: $bright_blue;
    background: rgba(0, 163, 217, 0.75);
}

h1 {
    background: url(../img/logo-towtext.png) no-repeat;
    width: 224px;
    height: 59px;
    text-indent: -9999px;
    display: block;
    margin-top: 24px;
}

h2 {
    font-weight: normal;
    color: $charcoal;
    line-height: 1.2em;
    padding-bottom: 1em;
}

.content {
    padding: 25px 0;
}

.screenshot {
    margin-top: -25px;
}

label {
    font-weight: normal;
    color: $charcoal;
}

input[type=text] {
    border: 1px solid #eee;
    padding: 1.3em;
}

footer {
    padding: 15px 0;
    background-color: rgba(255, 255, 255, 0.45);
    color: rgba(255, 255, 255, 0.45);
}

.disclaimer {
    p {
        font-size: 12px;
        color: $lightgrey;
        margin: 0;
        padding: 0;
        &.notices {
            padding-bottom: 1em;
        }
        &.credits {
            background: url(../img/national-day-of-civic-hacking.gif) no-repeat 0px 3px;
            padding-left: 176px;
        }
        a {
            color: $lightgrey;
            font-weight: bold;
            &:hover {
                text-decoration: underline;
            }
        }
    }
}

